@@ -1,5 +1,5 @@
 # "test/parser/prs/Makefile.am"
-#	$Id: Makefile.am,v 1.13.2.2 2006/02/10 08:09:57 fang Exp $
+#	$Id: Makefile.am,v 1.13.2.3 2006/02/10 21:11:06 fang Exp $
 
 include $(top_srcdir)/test/Make.test-head
 
@@ -7,9 +7,10 @@ HACKT_PARSE_TEST_FAILURES = inv-01 inv-04 inv-05 inv-10 inv-11 \
 	celem-07 celem-08 \
 	echo-02 echo-03 echo-04 \
 	after-01 \
-	spec-01 spec-03 \
+	spec-01 spec-03 spec-05 \
+	macro-pass-03 macro-pass-04 \
 	macro-param-01 macro-param-02 macro-param-03 \
-	size-02
+	size-02 size-06
 
 HACKT_PARSE_TEST_PASSES = inv-02 inv-03 inv-06 inv-07 inv-08 inv-09 \
 	inv-12 inv-13 inv-14 inv-15 inv-16 inv-17 \
