@@ -1,0 +1,3 @@
+Error: the 'passn' macro takes no parameters.
+	at [7:7..10]
+ERROR: at least one error in PRS body.
