@@ -1,0 +1,3 @@
+passn
+	at [6:7..12]
+ERROR: at least one error in PRS body.
