@@ -1,0 +1,9 @@
+// "size-06.hac"
+// should fail parsing
+
+defproc size_test (bool a, b) {
+prs {
+	a<3,2,1> => b-		// should parse-fail (up to 2 parameters)
+}
+}
+
