@@ -1,0 +1,3 @@
+The 'mk_exclhi' directive takes no parameters arguments.
+	at [8:11..14]
+ERROR: at least one error in spec body.
